--- a/assignment_5_solutions.ipynb
+++ b/assignment_5_solutions.ipynb
@@ -77,7 +77,7 @@
     "plt.ylabel(\"Probability\")\n",
     "plt.legend(loc='lower right')\n",
     "plt.title('Empirical and Theoretical CDF')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
